2004-11-07  Zoltan Varga  <vargaz@freemail.hu>

	* mini-sparc.h mini-sparc.c exceptions-sparc.c: Add support for OP_RETHROW.

	* mini.h: Add mono_arch_get_rethrow_exception () arch specific function.
	* mini-ops.h: Add OP_RETHROW.

	* mini.c inssel.brg: Distinguish between THROW and RETHROW.

	* cpu-amd64.c mini-amd64.c exceptions-amd64.c: Add support for OP_RETHROW.

2004-11-05  Geoff Norton  <gnorton@customerdna.com>
	
	* helpers.c: Change otool arguments from -V -v -t to -v -t on Darwin
	Makes the output much easier to read

2004-11-05  Ben Maurer  <bmaurer@ximian.com>

	* ssa.c: allocate MonoMethodVar.uses from the mempool. First, this
	prevents another huge leak when compiling with ssa. Secondly, the
	performance of doing this rather than freeing the lists is much
	better. GList does a lock every time you allocate a list link,
	so that it can use a memory pool. So, it is better to just use
	a memory pool of our own.
	
	* ssa.c, linear-scan.c: replace g_list_remove_link with
	g_list_delete.  The remove one does not free the GList, so we were
	leaking memory. On -O=all --compile-all with corlib, this cut down
	3 MB of allocations.

2004-11-05  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-sparc.c (mono_arch_create_jit_trampoline): Fix sparc build.

	* tramp-amd64.c (mono_arch_create_jit_trampoline): Fix amd64 build.

	* mini.h mini.c tramp-*.c: Moved xp parts of JIT trampoline creation
	into a new function mono_create_jit_trampoline ().

2004-11-02  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (get_spec): Allow tracing of classes without a namespace.

2004-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* mini.c: Fix pointer overwrite in mini_method_compile.

2004-11-2  Geoff Norton  <gnorton@customerdna.com>

	* inssel-ppc.brg (OP_OUTARG_VT (CEE_LDOBJ (base))):
	The darwin ABI needs some special handling for 1 and 2 byte structs
	Lets use lbz/lhz instead of lwz everywhere.
	* mini-ppc.c (calculate_sizes):  The Darwin ABI needs from special handling